--- a/src/index.css
+++ b/src/index.css
@@ -4,22 +4,22 @@
 
 body {
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 h1 {
-  margin: 0;
+  margin: 7px 0;
   font-size: 25px;
 }
 
 h5 {
   font-size: 10.24px;
+  margin: 0 0 9px 0;
 }
-
 
 header {
   height: 55px;
-  background-color: #F55A5A;
+  background-color: #f55a5a;
   color: whitesmoke;
   display: flex;
   justify-content: center;
@@ -31,15 +31,28 @@ header img {
   width: 20px;
 }
 
-.card {
+section {
   display: flex;
-  gap: 20px
+  flex-direction: column;
+  padding: 45px;
+  gap: 36px;
 }
 
-.card p{
+.card {
+  display: flex;
+  gap: 20px;
+}
+
+.card img {
+  width: 125px;
+  height: 168px;
+}
+
+.card p {
   font-size: 10.24px;
   margin: 0;
   width: 326px;
+  line-height: 15.36px;
 }
 
 span {
@@ -47,5 +60,19 @@ span {
 }
 
 .card--info_container {
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card--google {
+  font-size: 10.24px;
+  opacity: 50%;
+}
+
+.card--country {
+  font-size: 10.24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  margin: 0 12px 0 4px;
 }
